// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagCount component should render 1`] = `
<div
  className="ins-c-tagCount"
  onClick={[Function]}
>
  <i
    className="fas fa-tag"
  />
  <span />
  <TagModal
    modalOpen={false}
    systemName="paul.hostname.com"
  />
</div>
`;

exports[`TagCount component should render center Spinner 1`] = `
<div
  className="ins-c-tagCount"
  onClick={[Function]}
>
  <i
    className="fas fa-tag"
  />
  <span>
    44
  </span>
  <TagModal
    modalOpen={false}
    systemName="paul.hostname.com"
  />
</div>
`;
